Create a new custom control class: Steps 3-7

--- a/Star Rating/Star Rating/Storyboards/Base.lproj/Main.storyboard
+++ b/Star Rating/Star Rating/Storyboards/Base.lproj/Main.storyboard
@@ -14,7 +14,17 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view verifyAmbiguity="ignoreSizes" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0w5-Y6-RNM" customClass="CustomControl" customModule="Star_Rating" customModuleProvider="target">
+                                <rect key="frame" x="87" y="384" width="240" height="128"/>
+                                <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="0w5-Y6-RNM" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="CWq-AM-EDS"/>
+                            <constraint firstItem="0w5-Y6-RNM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ass-AW-Kqj"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="lUf-Ow-ncs"/>
