Custon Control Class Set Up

--- a/StarRating/StarRating/Base.lproj/Main.storyboard
+++ b/StarRating/StarRating/Base.lproj/Main.storyboard
@@ -3,19 +3,10 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Root View Controller-->
-        <scene sceneID="6Og-Z4-xrW">
-            <objects>
-                <tableViewController id="Fbi-PI-cRd" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" title="Root View Controller" id="HXg-xT-Zke"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="gw9-Fc-v1B" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="651" y="-11"/>
-        </scene>
         <!--Navigation Controller-->
         <scene sceneID="XUx-Om-LEO">
             <objects>
@@ -25,12 +16,38 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="Fbi-PI-cRd" kind="relationship" relationship="rootViewController" id="rRT-nJ-J5f"/>
+                        <segue destination="pZd-cd-DHC" kind="relationship" relationship="rootViewController" id="Q4y-DI-Yle"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IeJ-e9-A0O" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-84" y="-11"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="oi7-Wb-NYX">
+            <objects>
+                <viewController id="pZd-cd-DHC" customClass="ViewController" customModule="StarRating" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="QJH-s6-Bfv">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="J96-hC-bFj" customClass="CustomControl" customModule="StarRating" customModuleProvider="target">
+                                <rect key="frame" x="40" y="281" width="334" height="334"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <action selector="updateRating:" destination="pZd-cd-DHC" eventType="valueChanged" id="Qud-jr-FND"/>
+                                </connections>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="mXZ-qt-mkX"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="1EF-2M-Lr3"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wPR-n1-OT0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="680" y="-11"/>
         </scene>
     </scenes>
 </document>
