followed steps 1-2 for Build the control view

--- a/CustmoControl/CustmoControl/Base.lproj/Main.storyboard
+++ b/CustmoControl/CustmoControl/Base.lproj/Main.storyboard
@@ -38,7 +38,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="131.8840579710145" y="106.47321428571428"/>
+            <point key="canvasLocation" x="101" y="106"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Vws-GI-a3y">
