--- a/Rating/Rating/Base.lproj/Main.storyboard
+++ b/Rating/Rating/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="tN4-aU-UdV">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RRG-jD-VkD">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -7,50 +7,52 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Navigation Controller-->
-        <scene sceneID="Quf-cg-ZHN">
-            <objects>
-                <navigationController id="tN4-aU-UdV" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="xGA-U7-MqD">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="EfA-sx-chw"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="JpV-mH-JJo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1288" y="157"/>
-        </scene>
         <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <scene sceneID="peB-0H-dyJ">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Rating" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController id="e7w-sV-4Li" customClass="ViewController" customModule="Rating" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="NXJ-N9-UIJ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view verifyAmbiguity="ignoreSizes" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xgO-Ju-PKP" customClass="CustomControl" customModule="Rating" customModuleProvider="target">
-                                <rect key="frame" x="87" y="384" width="240" height="182"/>
-                                <color key="backgroundColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <view verifyAmbiguity="ignoreSizes" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZU8-GF-LNk" customClass="CustomControl" customModule="Rating" customModuleProvider="target">
+                                <rect key="frame" x="87" y="384" width="240" height="128"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                 <connections>
-                                    <action selector="updateRating:" destination="BYZ-38-t0r" eventType="valueChanged" id="EaM-AU-uHt"/>
+                                    <action selector="updateRating:" destination="e7w-sV-4Li" eventType="valueChanged" id="EfL-pI-7OI"/>
                                 </connections>
                             </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="xgO-Ju-PKP" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="OYl-8B-3k4"/>
-                            <constraint firstItem="xgO-Ju-PKP" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="psc-VI-cLF"/>
+                            <constraint firstItem="ZU8-GF-LNk" firstAttribute="centerX" secondItem="NXJ-N9-UIJ" secondAttribute="centerX" id="7qq-XE-oM0"/>
+                            <constraint firstItem="ZU8-GF-LNk" firstAttribute="centerY" secondItem="NXJ-N9-UIJ" secondAttribute="centerY" id="jPB-pm-jBc"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <viewLayoutGuide key="safeArea" id="kHO-tv-tZw"/>
                     </view>
-                    <navigationItem key="navigationItem" id="sBP-36-Wy1"/>
+                    <navigationItem key="navigationItem" id="miT-5D-h6E"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Xte-Tk-068" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-514" y="157"/>
+            <point key="canvasLocation" x="302.89855072463769" y="145.98214285714286"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="EpT-Do-ca4">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="RRG-jD-VkD" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="2vM-04-aOD">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="e7w-sV-4Li" kind="relationship" relationship="rootViewController" id="WWj-m4-TeU"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RrI-KZ-x0l" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-607.24637681159425" y="145.98214285714286"/>
         </scene>
     </scenes>
 </document>
