Set up IBAction to listen for updateRating

--- a/RatingCustomControl/RatingCustomControl/Base.lproj/Main.storyboard
+++ b/RatingCustomControl/RatingCustomControl/Base.lproj/Main.storyboard
@@ -14,7 +14,22 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view verifyAmbiguity="ignoreSizes" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XU2-4i-F59" customClass="CustomControl" customModule="RatingCustomControl" customModuleProvider="target">
+                                <rect key="frame" x="20" y="358" width="374" height="210"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <action selector="updateRating:" destination="BYZ-38-t0r" eventType="valueChanged" id="5GO-w7-Zru"/>
+                                </connections>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="XU2-4i-F59" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="Gwb-nF-5c9"/>
+                            <constraint firstItem="XU2-4i-F59" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="270" id="Ncf-QK-7Dq"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="XU2-4i-F59" secondAttribute="bottom" constant="294" id="Psk-Wn-yuV"/>
+                            <constraint firstItem="XU2-4i-F59" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="wvB-Om-Q46"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="8Ze-es-d7q"/>
