--- a/StarRating/StarRating/Base.lproj/Main.storyboard
+++ b/StarRating/StarRating/Base.lproj/Main.storyboard
@@ -14,7 +14,19 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view verifyAmbiguity="ignoreSizes" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aiB-5L-Am5" customClass="CustomControl" customModule="StarRating" customModuleProvider="target">
+                                <rect key="frame" x="87" y="384" width="240" height="128"/>
+                                <connections>
+                                    <action selector="updateRating:" destination="BYZ-38-t0r" eventType="valueChanged" id="xBY-Sk-Pmz"/>
+                                </connections>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="aiB-5L-Am5" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8kw-oe-maL"/>
+                            <constraint firstItem="aiB-5L-Am5" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="OIg-t7-Uh5"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="X1e-yX-8qB"/>
